Segundo dia: Criando os elementos de forma dinâmica com a manipulação do DOM

--- a/index.html
+++ b/index.html
@@ -31,31 +31,9 @@
             </div>
         </div>
 
-        <section class="movies">
-            <ul>
-                <li class="movie-card">
-                    <div class="movie-card__infos">
-                        <div>
-                            <strong class="movie-card__infos__title">O Predador: A Caçada (2022)</strong>
-                            <div class="movie-card__infos__details">
-                                <small class="movie-card__infos__detail detail-rating" title="Nota de avaliação"> 
-                                    <span class="label-accessiblity">Nota de avaliação</span>8.1
-                                </small>
-                                <small class="movie-card__infos__detail detail-favorite">
-                                    <span class="label-accessiblity">Ação</span>Favoritar
-                                </small>
-                            </div>
-                        </div>
-                        <div class="poster-proportion">
-                            <img src="https://www.themoviedb.org/t/p/w600_and_h900_bestv2/g7Ii9sYAFG96W7cvMQ4zXq39RJ5.jpg" class="movie-card__infos__poster" alt="Poster do filme">
-                        </div>
-                    </div>
-                    <div>
-                        <p class="movie_card__sinopsis">Ambientado no mundo da Nação Comanche no início de 1700, "O Predador: A Caçada" é a história não contada de uma jovem guerreira altamente qualificada, desesperada para proteger seu povo do perigo iminente. Ela persegue e finalmente confronta sua presa, que acaba sendo um predador alienígena altamente evoluído com um arsenal tecnologicamente avançado, resultando em um confronto brutal e aterrorizante entre os adversários.</p>
-                    </div>
-                </li>
-            </ul>
+        <section class="movies" id="moviesView">
         </section>
     </main>
+    <script type="module" src="./js/app.js"></script>
 </body>
 </html>
