Quarto dia: Implementando a funcionalidade da barra de pesquisa

--- a/app/index.html
+++ b/app/index.html
@@ -20,7 +20,7 @@
         <h1>Filmes populares</h1>
 
         <div class="movies-selecion-inputs">
-            <form class="search-input-container">
+            <form class="search-input-container" id="form-search">
                 <input type="search" class="input-search-movie" placeholder="Digite algum filme para pesquisar..." autocomplete="off">
                     <i class="bi bi-search" aria-hidden="true"></i>
                 </input>
