--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,8 @@
 
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
+
+    <script type="module" src="./js/app.js" defer></script>
 </head>
 <body>
     <main>
@@ -34,6 +36,6 @@
         <section class="movies" id="moviesView">
         </section>
     </main>
-    <script type="module" src="./js/app.js"></script>
 </body>
+<script id="test"></script>
 </html>
