--- a/app/index.html
+++ b/app/index.html
@@ -11,8 +11,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="./css/reset.css">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./assets/css/reset.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
 
     <script type="module" src="./js/app.js" defer></script>
 </head>
@@ -37,5 +37,4 @@
         </section>
     </main>
 </body>
-<script id="test"></script>
 </html>
